FFR-4341 -> FFR-4828 text overlapping issue fixed

--- a/src/Fa/Bundle/FrontendBundle/Resources/public/css/responsive.css
+++ b/src/Fa/Bundle/FrontendBundle/Resources/public/css/responsive.css
@@ -2379,7 +2379,7 @@
     .latest-shops-main{margin:38px 0 0 0}
     .latest-shops-main .xs-thin-btn{margin-top:0;width:140px}
     .latest-shop-list .large-8{width:50%}
-    .latest-shop-img{width:137px;height:103px}
+    .latest-shop-img{height:103px}
     .latest-shop-img img{max-width:137px;max-height:103px}
     .latest-shop-box{min-height:185px}
     .latest-place-ad{min-height:195px}
